<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/nomProyecto"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_margin="20dp"
        android:contentDescription="@string/logoDescripcion"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSucursales"
            android:textSize="15sp"/>
        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtProyectos"
            android:textSize="15sp"/>
        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btnLISTO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnListo"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        android:layout_margin="5dp"
        android:onClick="iniciarRegistro"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:gravity="center">
        <EditText
            android:id="@+id/txtScan"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:hint="@string/txtQRHint" />
    </LinearLayout>
    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnInsertar"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        android:layout_margin="5dp"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/txtQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="15sp"
        android:textAlignment="center"
        android:visibility="invisible"
        android:enabled="false" />
</LinearLayout>